--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: h3sc work
 description: well done!
 theme: just-the-docs
 
-url: https://zzinee.github.io/h3s_repo/
+url: https://zzinee.github.io/h3sc_repo
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
