--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: h3sc work
 description: well done!
-theme: just-the-docs
+remote_theme: pmarsceill/just-the-docs
 
 url: https://zzinee.github.io/h3sc_repo
 
