--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: h3sc work
+title: h3sc 작업 공유
 description: well done!
-remote_theme: pmarsceill/just-the-docs
+theme: just-the-docs
 
 url: https://zzinee.github.io/h3sc_repo
 
